cluster/atlassian/bitbucket/alderaan/bitbucket-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitbucket-srv
  namespace: atlassian
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitbucket
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bitbucket
        track: staging
    spec:
      containers:
      - name: bitbucket-srv
        image: atlassian/bitbucket-server:7.1.1-jdk11
        volumeMounts:
        - name: bitbucket-var
          mountPath: /var/atlassian/application-data/bitbucket
        - name: jdbc-driver-mysql-5148
          mountPath: /var/atlassian/application-data/bitbucket/lib/mysql-connector-java-5.1.48.jar
          subPath: mysql-connector-java-5.1.48.jar

      volumes:
        - name: bitbucket-var
          persistentVolumeClaim:
            claimName: bitbucket-var-pvc
        - name: jdbc-driver-mysql-5148
          configMap:
            name: jdbc-driver-mysql-5148
