cluster/atlassian/bitbucket/alderaan/bitbucket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitbucket-service
  namespace: atlassian
  labels:
    app: bitbucket
spec:
  ports:
  - port: 7990
    protocol: TCP
    targetPort: 7990
  selector:
    app: bitbucket
