cluster/atlassian/bitbucket/alderaan/bitbucket-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bitbucket-web
  namespace: atlassian
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "36000"
spec:
  rules:
  - host: bitbucket.k8s-demo.cengn.ca
    http:
      paths:
      - backend:
          serviceName: bitbucket-service
          servicePort: 7990
  tls:
  - hosts:
    - bitbucket.k8s-demo.cengn.ca
    secretName: bitbucket-tls
